--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=postgres
 spring.datasource.password=Jeremias1
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+defaultVoteCountValue=0
