Consertar o cocô que fiz,

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/plataforma_de_votacao_db
 spring.datasource.username=root
-spring.datasource.password=JesusCristo
+spring.datasource.password=godalzinho
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
