--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/plataforma_de_votacao_db
 spring.datasource.username=root
-spring.datasource.password=godalzinho
+spring.datasource.password=Godalzinh0
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.main.allow-circular-references=true
