--- a/DockerFile
+++ b/DockerFile
@@ -22,4 +22,4 @@ RUN mkdir /app
 COPY --from=ubuntu /target/plataforma-de-votacao-0.0.1-SNAPSHOT.jar /app
 
 # Executando o projeto
-CMD ["java", "-jar", "/app/plataforma-de-votacao-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java", "-jar", "/app/plataforma-de-votacao-0.0.1-SNAPSHOT.jar"]
